# PIA_tasca_3_Cristobal_Cano

./: flor_predict_service.py  flor_predictor_app.py  pyproject.toml
clients/: client.ipynb
notebooks/: decision_trees.ipynb  knn.ipynb  regression.ipynb  svm.ipynb
vista/: response.py
