[tool.poetry]
name = "pia-tasca-3-cristobal-cano"
version = "0.1.0"
description = ""
authors = ["tofolcm <tofol.c.m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.2"
pandas = "^2.1.4"
ipykernel = "^6.27.1"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
